--- a/form/index.html
+++ b/form/index.html
@@ -12,13 +12,23 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/grids-responsive-min.css" /> -->
     <script src="js/formtoobj.js"></script>
     <script src="js/md5.js"></script>
+    <script src="js/debugHelper.js"></script>
 </head>
 
 <body>
     <div id=formcontent></div>
     <div id=overlay></div>
-    <div id=datalink></div>
     <div id=content>
+        <div id="header">
+
+            <div id=profil><a href="#profil" class=blueFont>Profil</a></div>
+            <div id=mood><a href="#mood" class=orangeFont>Mood</a></div>
+            <div id=chart><span href="#chart" class=greenFont>Chart</span></div>
+            <div id=datalink></div>
+            <div id=dellocal><a href="#dellocal" class=redFont>X</a></div>
+
+
+        </div>
         <form id=ProfilForm autocomplete="off">
             <fieldset>
                 <legend>Profil</legend>
@@ -44,7 +54,7 @@
 
                 <div class="profil_1">
                     <div class="alter">
-                        <label for="P_Alter">Jahrgang</label>
+                        <label for="P_Alter">Geburtsjahr</label>
                         <input type="number" id="P_Alter" name=Alter placeholder=1982>
                     </div>
                     <div class="geschlecht">
@@ -233,288 +243,29 @@
     //
     // user verification & data link 
     //
-    var DataFreigegeben = document.getElementById('P_Freigeben');
+    var DataFreigegeben = document.getElementById('P_Freigeben').checked;
     var localDataNameField = document.getElementById('P_Name');
     var localDataName = md5(localDataNameField.value);
     var datalink = document.getElementById('datalink');
-    datalink.innerHTML = "<a href='save.php?n=" + localDataName + "'>JSON<a/>";
 
-    localDataNameField.addEventListener("input", event => {
-        localDataName = md5(localDataNameField.value);
-        datalink.innerHTML = "<a href='save.php?n=" + localDataName + "'>JSON<a/>";
-        console.log(localDataName)
-
-    });
+    var ProfilLink = document.getElementById('profil');
+    var MoodLink = document.getElementById('mood');
+    var DelLocalLink = document.getElementById('dellocal');
+    var ProfilForm = document.getElementById('ProfilForm');
+    var MoodForm = document.getElementById('MoodForm');
 
 
-    //
-    // populate the ProfilForm
-    //
+    // all form elements for populating
     let ProfilFormElements = document.getElementById('ProfilForm').elements;
-    const populateForm = () => {
-        if (localStorage.key(localDataName)) {
-            const localData = JSON.parse(localStorage.getItem(localDataName));
-            // console.log(localData)
 
-            // find profil element in localData
-            for (let i = 0; i < localData.length; i++) {
-                if (localData[i].hasOwnProperty('Profil')) {
-                    var localDataProfil = localData[i].Profil;
-                    // console.log(localDataProfil)
-                    // console.log(ProfilFormElements)
-                    for (const ProfilFormElement of ProfilFormElements) {
-                        if (['input', 'textarea'].indexOf(ProfilFormElement.type) && ProfilFormElement.name in localDataProfil) {
-                            ProfilFormElement.value = localDataProfil[ProfilFormElement.name];
-                        }
-                        if (('checkbox' == ProfilFormElement.type) &&
-                            (ProfilFormElement.name in localDataProfil) &&
-                            ('on' == localDataProfil[ProfilFormElement.name])) {
-                            ProfilFormElement.checked = 'checked';
-                        }
-                    }
-                    break;
-                }
-            }
-            var wirkungenStd = {
-                'Unruhe': {
-                    'active': false,
-                    'color': 'red'
-                },
+    // get localData
+    var localData = JSON.parse(localStorage.getItem(localDataName)) || [];
+</script>
+<script src="js/form.js"></script>
+<script>
+    populateForm();
 
-                'Konzentration': {
-                    'active': false,
-                    'color': 'blue'
-                },
-
-                'Aufmerksamkeit': {
-                    'active': false,
-                    'color': 'green'
-                },
-                'Motivation': {
-                    'active': false,
-                    'color': 'salomon'
-                },
-                'Auslastung': {
-                    'active': false,
-                    'color': 'orange'
-                },
-            }
-            console.log('wirkungenStd')
-            console.log(wirkungenStd)
-                // console.log(wirkungenStd.Unruhe.color)
-
-            // 
-            // create label & checkboxes for "Wirkungen"
-            var wirkungenLoc = localDataProfil.wirkung;
-            console.log('wirkungenLoc')
-            console.log(wirkungenLoc);
-
-            // 
-            // get wirkungen from local and set active state to wirkungenStd 
-            //
-            for (var wirkung in wirkungenLoc) {
-                if (wirkungenStd.hasOwnProperty(wirkungenLoc[wirkung])) {
-                    wirkungenStd[wirkungenLoc[wirkung]].active = true;
-                } else {
-                    let wirkungCust = wirkungenLoc[wirkung];
-                    console.log(wirkungCust)
-
-                    wirkungenStd = Object.assign({
-                        [wirkungCust]: {
-                            'active': true,
-                            'color': 'orange'
-                        }
-                    }, wirkungenStd);
-
-                }
-            }
-
-
-            var WirkungCheckboxes = '';
-            for (var wirkung in wirkungenStd) {
-                let checked = (wirkungenStd[wirkung].active ? 'checked' : '');
-                let color = wirkungenStd[wirkung].color;
-                WirkungCheckboxes += `<input type=checkbox class=hidden id=${wirkung} name=wirkung[] value=${wirkung} ${checked}>`;
-                WirkungCheckboxes += `<label class="buttonlabel wirkung" for=${wirkung}>${wirkung}</label>`;
-            }
-            WirkungCheckboxes += '<input type=text class=newSituation name=wirkung[] placeholder="individuelle Wirkungen">';
-            document.getElementById('WirkungCheckboxes').innerHTML = WirkungCheckboxes;
-
-        }
-    };
-    document.onload = populateForm();
-
-
-
-    //
-    // get POST from forms
-    //
-    var forms = document.getElementsByTagName("FORM");
-    // console.log(forms)
-    for (const form of forms) {
-        form.addEventListener("submit", function(evt) {
-            evt.preventDefault();
-            // get local and form data
-            var localData = JSON.parse(localStorage.getItem(localDataName)) || [];
-            var FormResultsObject = formToObject(document.getElementById(form.id));
-            if (FormResultsObject) {
-                // add date to formdata
-                // FormResultsObject = Object.assign({Timestamp: Date.now()}, FormResultsObject);
-                // FormResultsObject = Object.assign({DateISO: new Date()}, FormResultsObject);
-                FormResultsObject = Object.assign({
-                    Date: new Date().toLocaleDateString()
-                }, FormResultsObject);
-
-
-                // PROFIL
-                if ('ProfilForm' == form.id) {
-                    // delete username and password
-                    delete FormResultsObject.Name;
-                    delete FormResultsObject.Passwort;
-                    // console.log(localData)
-                    // find the Profil entry
-                    for (let i = 0; i < localData.length; i++) {
-                        if (localData[i].hasOwnProperty('Profil')) {
-                            // console.log(localData[i])
-                            localData[i].Profil = FormResultsObject;
-                            var addedProfile = 1;
-                            break;
-                        }
-                    }
-                    // create the Profil entry
-                    if (!addedProfile) {
-                        localData.push({
-                            Profil: FormResultsObject
-                        });
-                    }
-                }
-                // MOOD
-                if ('MoodForm' == form.id) {
-                    // console.log(localData)
-                    localData.push({
-                        Mood: FormResultsObject
-                    });
-                }
-                // save data local
-                localStorage.setItem(localDataName, JSON.stringify(localData));
-                // send data to server if allowed by user
-                // if (DataFreigegeben.checked) {
-                saveOnServer(localData, localDataName);
-                // }
-            }
-
-            //
-            // get FormData in 2D for validation and HTML Output
-            //
-            let FormData2D = getFormData(form);
-            outputFormHTML(FormData2D);
-            // update forms
-            populateForm();
-        });
-    }
-
-
-    //
-    // send the local file to server
-    //
-    function saveOnServer(data, localDataName) {
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", "save.php?n=" + localDataName);
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === 4 && xhr.status === 200) {
-                // console.log(xhr.responseText);
-                displayAlert("Form data has been sended to server!");
-            }
-        }
-        xhr.setRequestHeader("Content-type", "application/json")
-        xhr.send(JSON.stringify(data));
-    }
-
-
-    //
-    // print the FormData on Website
-    //
-    function outputFormHTML(FormData2D) {
-        // write to HTML
-        var formContent = '<table>';
-        for (const el of FormData2D) {
-            formContent += "<tr><td>" + el.name + " </td><td> " + el.value + "</td></tr>";
-        }
-        formContent += '</table>';
-        document.getElementById("formcontent").innerHTML = formContent;
-    }
-
-    //
-    // get an iterable array from form data 
-    // parameter: form.id
-    //
-    function getFormData(form) {
-        var FormData = [];
-        Array.prototype.slice.call(form.elements).forEach(function(field) {
-            if (!field.name || field.disabled || ['file', 'reset', 'submit', 'button'].indexOf(field.type) > -1) return;
-            if (field.type === 'select-multiple') {
-                Array.prototype.slice.call(field.options).forEach(function(option) {
-                    if (!option.selected) return;
-                    FormData.push({
-                        name: field.name,
-                        value: option.value
-                    });
-                });
-                return;
-            }
-            if (['checkbox', 'radio'].indexOf(field.type) > -1 && !field.checked) return;
-            if (!field.value) return;
-            FormData.push({
-                name: field.name,
-                value: field.value
-            });
-        });
-        // console.log(FormData);
-        return FormData;
-    }
-
-
-
-
-    //
-    // This function displays a message on the page for 1 second
-    //
-    const overlay = document.getElementById("overlay");
-    const displayAlert = message => {
-        overlay.innerHTML = "<div>"+message+"</div>";
-        overlay.classList.add("transition");
-        overlay.style.display = "block";
-        setTimeout(function() {
-            overlay.style.display = "none";
-        }, 1000);
-    };
-
-
-
-    //
-    // add or delete medikations
-    //
-    var ct = 1;
-
-    function newMedikation() {
-        var new_medikation = document.createElement("div");
-        new_medikation.className = 'pure-g';
-        new_medikation.id = "Medikation_" + ct;
-        new_medikation.innerHTML = document.getElementById("Medikation_0").innerHTML.replaceAll('[0]', '[' + ct + ']');
-        document.getElementById("AddRemoveMedikation").before(new_medikation);
-        document.getElementById("RemoveMedikation").style.display = 'inline';
-        ct++;
-    }
-
-    function delMedikation() {
-        var delMedikation = document.querySelectorAll('[id^=Medikation_]');
-        if (delMedikation.length > 1) {
-            delMedikation[delMedikation.length - 1].remove();
-        }
-        if (delMedikation.length == 2) {
-            document.getElementById("RemoveMedikation").style.display = 'none';
-        }
-    }
+    // showMessage(showSize());
 </script>
 
 
